# videos

./: .gitignore  OLD_framework.py  README.md  colors.py  devenv.root  flake.nix  format.py  framework.py  janim.py  main.py  models.py  opengl.py  parser.py  patches.py  pyproject.toml  scene.py  v2r.json  v2r.py  video1.py  video2.py  video3.py  video4.py  video5.py  video5.sloka  video5_redux.py
blueprints/: BagavadgItAyAM_2.22.sloka  raGuvaMSe_1.1.sloka  tEttirIyopanizade_2.2.2.sloka
blueprints/sUtrARi/: SrIsarasvatIstotraM.sutra  draft.sutra
blueprints/suBAzita/: paropakArAya.sloka
nirukta/: constants.py  format.py  inflection.py  nirukta.py  patches.py  profiling.py  render.py  strings.py  util.py
nirukta/models/: __init__.py  enums.py  gloss.py
nirukta/models/files/: __init__.py  sloka.py  sutra.py
nirukta/models/presentation/: __init__.py  line.py  sloka.py  utterance.py
nirukta/models/tokens/: __init__.py  compound.py  display.py  simple.py
nirukta/parsing/: __init__.py  grammars.py
nirukta/parsing/visitors/: __init__.py  sloka.py  sutra.py
nirukta/timelines/: __init__.py  explain_sloka.py  introduce_sloka.py  line.py  sloka_file.py  sutra_file.py  transform.py  utterance.py
slokas/: BagavadgItAyAM_6.30.sloka  _bhagavadgItAyAM_6.30.sloka  raghuvaMshe_1.1.sloka  sarasvati.sloka  tEttirIyopanizade_2.2.2.sloka  taittirIyopaniSade_2.2.2.2.sloka  taittirIyopaniSade_2.2.2.sloka
