[project]
name = "nirukta"
version = "0.1.0"
description = "Procedurally generated Sanskrit grammar animations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aksharamukha>=2.3",
  "janim[gui]>=4.0.0",
  "manim-devanagari>=0.2.2",
  "parsimonious>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
